<resources>
    <string name="app_name">RapidReg</string>
    <!--List Spinner-->
    <string name="spinner_order_by">Order by</string>

    <!--Loging activity layout string-->
    <string name="app_banner_text">Primero</string>
    <string name="username_hint_text">Username</string>
    <string name="password_hint_text">Password</string>
    <string name="url_hint_text">URL</string>
    <string name="text_view_change_url">Change URL</string>
    <string name="button_login_text">Login</string>
    <string name="login_loading_text">Logging in, please wait...</string>
    <string name="login_offline_no_user_text">Sorry, your must be connected to the internet for the first-time login.</string>
    <string name="login_offline_success_text">Offline login successful.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="login_username_invalid_text">Enter a valid username!</string>
    <string name="login_password_invalid_text">Enter a valid password!</string>
    <string name="login_url_invalid_text">Enter a valid url!</string>
    <string name="login_failed_credential">Sorry, please check your username, password and URL.</string>
    <string name="login_failed_to_connect_prefix">Failed to connect to \n</string>
    <string name="login_failed_check_network_and_url">Sorry, please check your network and URL. </string>
    <string name="login_out_successful_text">Logout succeed.</string>
    <string name="login_unauthorized_message">Sorry, incorrect username or password.</string>
    <string name="login_service_unavailable_message">Service Unavailable!</string>
    <string name="login_not_find_code_message">Not find status code!</string>
    <string name="login_success_message">Login successful.</string>

    <string name="login_user_label_key">login_user</string>
    <string name="syncing_forms_text">Syncing forms, please try it later</string>
    <string name="order_by">Order by&#160;</string>
    <string name="case_id">ID:&#160;</string>
    <string name="child_gender">child gender</string>


    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="age_from">Age From</string>
    <string name="age_to">To</string>
    <string name="caregiver">Name of Current Caregiver</string>
    <string name="registration_date">Registration date</string>
    <string name="inquiry_date">Date of Inquiry</string>
    <string name="date">Date</string>
    <string name="location">Location</string>

    <!-- Toolbar Start-->
    <string name="toolbar_save_button_text">SAVE</string>
    <string name="toolbar_select_all_button_text">SELECT ALL</string>
    <!-- Toolbar End-->

    <!-- Title -->
    <string name="search">Search</string>
    <string name="cases">Cases</string>
    <string name="child_case">Cases</string>
    <string name="cp_case">CP Cases</string>
    <string name="gbv_case">GBV Cases</string>
    <string name="edit">Edit</string>
    <string name="case_details">Case Details</string>
    <string name="incidents">Incidents</string>
    <string name="child_incident">Incident</string>
    <string name="incident_details">Incident Details</string>
    <string name="tracing">Tracing Requests</string>
    <string name="tracing_details">Tracing Request Details</string>
    <string name="sync">Synchronization</string>
    <!-- Title -->
    <string name="click_to_search">Click to search</string>
    <string name="done">Done</string>
    <string name="no_search_result">Sorry, no results found for this search criteria.</string>
    <string name="no_records">No records available.</string>

    <string-array name="order_array">
        <item>Create Time</item>
        <item>Age</item>
    </string-array>

    <string name="no_photo_promote_info">No photo file exists.</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="required_field_is_not_filled">Sorry, please make sure all required information are entered</string>
    <string name="show_hide">Show/Hide</string>
    <string name="save">Save</string>
    <string name="new_case">New Case</string>
    <string name="new_tracing">New Tracing Request</string>
    <string name="new_incident">New Incident</string>
    <string name="quit">Quit</string>
    <string name="quit_without_saving">Are you sure you want to quit without saving?</string>
    <string name="delete_subform">Are you sure you want to delete this subform</string>
    <string name="recording_is_too_short">Recording is too short</string>
    <string name="audio_file_not_exists">No audio file exists.</string>

    <!--Sync-->
    <string name="last_sync_time">Last synchronization time</string>
    <string name="record_count_for_last_sync">Record count for last synchronization</string>
    <string name="record_count_for_not_sync">Record count for not synced data</string>
    <string name="place_holder_last_sync_time">06-15-2016 16:14</string>
    <string name="place_holder_record_count_for_last_sync">49</string>
    <string name="place_holder_record_count_for_not_sync">146</string>
    <string name="button_sync_state_of_click_to_sync">Sync</string>
    <string name="start_sync_message">Synchronizing, Please wait ...</string>
    <string name="confirm_cancel_sync_message">Are you sure you want to stop sync ?</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="deny_button_text">No</string>
    <string name="not_now_button_text">Not Now</string>
    <string name="confirm_button_text">Yes</string>
    <string name="stop_sync_button_text">Yes, stop now</string>
    <string name="continue_sync_button_text">Continue sync</string>
    <string name="sync_upload_success_message">Congrats! Your upload request is completed.</string>
    <string name="sync_download_success_message">Congrats! Your download request is completed.</string>
    <string name="sync_pull_form_success_message">"Congrats! Your synchronisation request is completed."</string>
    <string name="sync_error_message">Sorry, the synchronization request can not proceed, please contact the support team.</string>
    <string name="sync_request_time_out_error_message">The network is not stable, please check your internet connection and try again.</string>
    <string name="sync_server_not_available_error_message">Web server is not available, please contact your admin.</string>
    <string name="try_to_sync_message">Are you sure you want to sync records?</string>
    <string name="remove_photo_confirmation">Are you sure you want to remove this photo?</string>
    <string name="save_success">Record saved</string>
    <string name="save_failed">Record saved failed</string>
    <string name="filter">Filter</string>
    <string name="show_short_form">Show short form</string>
    <string name="show_more_details">Show more details</string>
    <string name="sync_forms">Sync forms</string>
    <string name="forms_is_syncing_msg">Syncing forms, please wait a moment</string>
    <string name="sync_forms_message">forms were not pulled down successfully, press OK to resync.</string>
    <string name="sync_forms_error">Sync forms error, please try it later</string>
    <string name="sync_tracing_forms_error">Sync forms error, please try it later</string>
    <string name="sync_incident_forms_error">Sync forms error, please try it later</string>
    <string name="tracing_request">Tracing Request</string>
    <string name="not_sync_promote">Not synced yet</string>
    <string name="produce_cases_successfully_msg">Produce cases complete!</string>
    <string name="new_cp_case">New Case</string>
    <string name="new_gbv_case">New Case</string>
    <string name="cp_case_details">Case Details</string>
    <string name="gbv_case_details">Case Details</string>
    <string name="survivor_code">Survivor Code</string>
    <string name="type_of_violence">Type of Violence</string>
    <string name="date_of_inquiry">Date of Inquiry</string>
    <string name="toolbar_title_text_placeholder">Tool Bar Text Placeholder</string>
    <string name="fetching_case_amount_msg">Fetching case amount from web server…</string>
    <string name="fetching_tracing_amount_msg">Fetching Tracing request amount from web server…</string>
    <string name="fetching_incident_amount_msg">Fetching incident amount from web server…</string>
    <string name="downloading_cases_sync_progress_msg">Downloading Cases…Please wait a moment.</string>
    <string name="downloading_tracings_sync_progress_msg">Downloading Tracing request…Please wait a moment.</string>
    <string name="downloading_incidents_sync_progress_msg">Downloading Incident…Please wait a moment.</string>
    <string name="fetching_form_msg">Fetching forms from web server…</string>
    <string name="uploading_sync_progress_msg">Uploading…Please wait a moment.</string>
    <string name="network_not_available">Network is not available, please check your network.</string>
    <!--Sync-->

    <!--Transparent theme-->
    <style name="Transparent" parent="AppTheme">
        <item name="android:windowContentOverlay">@null</item>
        <item name="android:windowIsTranslucent">true</item>
        <item name="android:windowBackground">@android:color/transparent</item>
        <item name="android:windowNoTitle">true</item>
        <item name="android:backgroundDimEnabled">false</item>
    </style>
    <!--Transparent theme-->

    <!--Dialog start-->
    <string name="dialog_title_text_placeholder">Dialog Title Text</string>
    <string name="dialog_progress_message_text_placeholder">Dialog Progress Message Text</string>
    <string name="dialog_item_from_camera">From Camera</string>
    <string name="dialog_item_from_gallery">From Gallery</string>
    <string name="dialog_item_cancel">Cancel</string>
    <string name="date_text">Date</string>
    <string name="date_range">Date Range</string>
    <string name="date_hint">Select Date</string>
    <string name="date_from_hint">From</string>
    <string name="date_to_hint">To</string>

    <!--List start-->
    <string name="list_item_delete_button_text">DELETE</string>
    <string name="list_item_delete_cancel_button_text">CANCEL</string>
    <string name="delete_title">WARNING</string>
    <string name="delete_confirm_message">Are you sure the data is no longer needed on your device?</string>
    <string name="delete_success_info">Records are deleted</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="cannot_save">Cannot Save</string>
    <string name="ok">OK</string>
    <string name="clear">CLEAR</string>
    <string name="cancel">CANCEL</string>
    <string name="invalid_date_msg">Date should not be in future.</string>
    <string name="warning">Warning</string>
    <string name="invalid_value">Invalid Value</string>
    <string name="no_filed_exists_in_subform">No field exists in current subform.</string>

</resources>
