<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <org.unicef.rapidreg.widgets.ClearableEditText
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        android:maxLength="30"
        android:singleLine="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lighter_gray" />

    <org.unicef.rapidreg.widgets.ClearableEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:maxLength="30"
        android:singleLine="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lighter_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <org.unicef.rapidreg.widgets.ClearableEditText
            android:id="@+id/age_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/age_from"
            android:inputType="numberDecimal"
            android:maxLength="2"
            android:singleLine="true" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/lighter_gray" />

        <org.unicef.rapidreg.widgets.ClearableEditText
            android:id="@+id/age_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/age_to"
            android:inputType="numberDecimal"
            android:maxLength="2" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lighter_gray" />

    <org.unicef.rapidreg.widgets.ClearableEditText
        android:id="@+id/caregiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/caregiver"
        android:maxLength="30"
        android:singleLine="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lighter_gray" />

    <org.unicef.rapidreg.widgets.ClearableEditText
        android:id="@+id/registration_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registration_date"
        android:maxLength="30"
        android:singleLine="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lighter_gray" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/done"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_button_height"
        android:background="@color/ftn_blue"
        android:gravity="center"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_20" />

</LinearLayout>