<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/size_10"
    android:paddingRight="@dimen/size_10"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_item_camera"
        android:layout_width="@dimen/dialog_photo_upload_width"
        android:layout_height="wrap_content"
        android:padding="@dimen/dialog_title_padding"
        android:text="@string/dialog_item_from_camera"
        android:textSize="@dimen/dialog_photo_upload_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:background="@color/lightgrey" />

    <TextView
        android:id="@+id/dialog_item_gallery"
        android:layout_width="@dimen/dialog_photo_upload_width"
        android:layout_height="wrap_content"
        android:padding="@dimen/dialog_title_padding"
        android:text="@string/dialog_item_from_gallery"
        android:textSize="@dimen/dialog_photo_upload_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:background="@color/lightgrey" />

    <TextView
        android:id="@+id/dialog_item_cancel"
        android:layout_width="@dimen/dialog_photo_upload_width"
        android:layout_height="wrap_content"
        android:padding="@dimen/dialog_title_padding"
        android:text="@string/dialog_item_cancel"
        android:textSize="@dimen/dialog_photo_upload_text_size" />

</LinearLayout>