<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/id_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <org.unicef.rapidreg.widgets.ClearableEditText
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id"
            android:maxLength="30"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lighter_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/survivor_code_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <org.unicef.rapidreg.widgets.ClearableEditText
            android:id="@+id/survivor_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/survivor_code"
            android:maxLength="30"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lighter_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <org.unicef.rapidreg.widgets.ClearableEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:maxLength="30"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lighter_gray" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/type_of_violence_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/type_of_violence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lighter_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/age_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <org.unicef.rapidreg.widgets.ClearableEditText
                android:id="@+id/age_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/age_from"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:singleLine="true" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/lighter_gray" />

            <org.unicef.rapidreg.widgets.ClearableEditText
                android:id="@+id/age_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/age_to"
                android:inputType="numberDecimal"
                android:maxLength="3" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lighter_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/caregiver_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <org.unicef.rapidreg.widgets.ClearableEditText
            android:id="@+id/caregiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/caregiver"
            android:maxLength="30"
            android:singleLine="true" />

        <View
            android:id="@+id/caregiver_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lighter_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/registration_date_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/registration_date_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/search_bar_left_padding"
            android:paddingRight="@dimen/search_bar_right_padding">

            <TextView
                android:id="@+id/registration_date"
                android:layout_width="match_parent"
                android:layout_height="@dimen/search_bar_item_height"
                android:background="@drawable/edit_view_shape"
                android:gravity="center_vertical"
                android:hint="@string/registration_date"
                android:textColor="@color/primero_font_dark"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_size_16" />

            <ImageButton
                android:id="@+id/registration_date_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:src="@drawable/clear_black"
                android:visibility="invisible" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lighter_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_of_inquiry_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/date_of_inquiry_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/search_bar_left_padding"
            android:paddingRight="@dimen/search_bar_right_padding">

            <TextView
                android:id="@+id/date_of_inquiry"
                android:layout_width="match_parent"
                android:layout_height="@dimen/search_bar_item_height"
                android:background="@drawable/edit_view_shape"
                android:gravity="center_vertical"
                android:hint="@string/date_of_inquiry"
                android:textColor="@color/primero_font_dark"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_size_16" />

            <ImageButton
                android:id="@+id/date_of_inquiry_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:src="@drawable/clear_black"
                android:visibility="invisible" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lighter_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/location_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
        <org.unicef.rapidreg.widgets.ClearableEditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:maxLength="30"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lighter_gray" />
    </LinearLayout>


    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/done"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_button_height"
        android:background="@color/primero_blue"
        android:gravity="center"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_20" />

</LinearLayout>
