<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_5">

        <EditText
            android:id="@+id/EditBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/filter"
            android:maxLines="1"
            android:textColor="@color/primero_blue"
            android:textSize="@dimen/text_size_12" />

    </android.support.design.widget.TextInputLayout>


    <ListView
        android:id="@+id/List"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:choiceMode="singleChoice" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clearButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="Clear"
            android:textSize="@dimen/text_size_12" />

        <Button
            android:id="@+id/cancelButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/cancel"
            android:textSize="@dimen/text_size_12" />

        <Button
            android:id="@+id/okButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/ok"
            android:textSize="@dimen/text_size_12" />

    </LinearLayout>

</LinearLayout>